1.app入参将bot机器人参数一并传入 2.cache进行调整，增加前缀，防止冲突，rediscache和cache均添加 3.更改为docker_compose方式启动,减少docker构建

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DIFY_CONVERSATION_REMAIN_TIME=15
 
 # dingtalk config
 DINGTALK_AI_CARD_TEMPLATE_ID="<your-dingtalk-ai-card-temp-id>"
+
+# redis
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
