因为卡片id是与单个应用绑定的，将卡片模板id从.env迁移到bots.yaml中

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DIFY_OPEN_API_URL="https://api.dify.ai/v1"
 DIFY_CONVERSATION_REMAIN_TIME=15
 
 # dingtalk config
-DINGTALK_AI_CARD_TEMPLATE_ID="<your-dingtalk-ai-card-temp-id>"
+#DINGTALK_AI_CARD_TEMPLATE_ID="<your-dingtalk-ai-card-temp-id>"
 
 # redis
 REDIS_HOST=127.0.0.1
